tests/multi_file/passing/P1_private_same_namespace/auth/session.mlang
namespace auth {
    let secret 42;

    pub fn expose_secret ||->i32 {
        secret
    };
}
