tests/multi_file/failing/P4_private_use_error/module.mlang
namespace auth {
    let secret "token";
    pub let public_key "public";
}
